wordpress-PV-test/wp-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-https
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hostname`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
  tls:
    secretName: wordpress-tls
